Better deployment script (#2)
* Migrating deploy script to python

* FIxed reqwest not being statically linked

* First working script

* Fixed gitignore

* Added automatic obscuring of password

* Maintain order of upstream DNS

* Removed redundant config

* Two stage docker compose up

* Removed legacy deploy script

* Changed owncloud.local to use HTTP

* Disable HTTPS redirect

* Disable traefik for jellyfin

* More traefik fixes

* Fixed traefik

* Added check for owncloud user

* Auto install rclone plugin

* rclone plugin fix

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -2,18 +2,17 @@ FROM alpine:latest
 
 ARG duplicity_password
 ARG duplicity_offsite_dest
-ARG gs_access_key_id
-ARG gs_secret_key
+ARG aws_access_key_id
+ARG aws_secret_key
 
 ARG cloudflare_email
 ARG cloudflare_key
 ARG cloudflare_domain
 ARG cloudflare_subdomains
 
-RUN apk update && apk upgrade && apk add py3-pip duplicity jq curl openssh
-RUN pip3 install boto3 requests python-dotenv
+RUN apk update && apk upgrade && apk add duplicity jq curl openssh
 
-COPY general/dotenv_writer/target/aarch64-unknown-linux-musl/release/dotenv_writer /bin/dotenv_writer
+COPY general/dotenv_writer/build/bin/dotenv_writer /bin/dotenv_writer
 RUN chmod +x /bin/dotenv_writer
 
 RUN dotenv_writer -D CLOUDFLARE_EMAIL=${cloudflare_email} \
@@ -22,14 +21,14 @@ RUN dotenv_writer -D CLOUDFLARE_EMAIL=${cloudflare_email} \
     -D CLOUDFLARE_SUBDOMAINS=${cloudflare_subdomains} \
     -D DUPLICITY_PASSWORD=${duplicity_password} \
     -D DUPLICITY_OFFSITE_DEST=${duplicity_offsite_dest} \
-    -D AWS_ACCESS_KEY_ID=${gs_access_key_id} \
-    -D AWS_SECRET_ACCESS_KEY=${gs_secret_key} \
+    -D AWS_ACCESS_KEY_ID=${aws_access_key_id} \
+    -D AWS_SECRET_ACCESS_KEY=${aws_secret_key} \
     --output /
 
 ADD cron/duplicity /duplicity
 RUN chmod +x /duplicity/run_dup_once.sh
 
-COPY cron/cloudflare-dns/target/aarch64-unknown-linux-musl/release/cf_dyndns /bin/cf_dyndns
+COPY cron/cloudflare-dns/build/bin/cf_dyndns /bin/cf_dyndns
 RUN chmod +x /bin/cf_dyndns
 
 ADD cron/run_hourly/ /etc/periodic/hourly/
