--- a/cron/cloudflare-dns/Cargo.toml
+++ b/cron/cloudflare-dns/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "3.2.22", features = ["derive"] }
 dotenv = "0.15.0"
 email_address = "0.2.3"
 log = "0.4.17"
+openssl = { version="0.10.42", features=["vendored"] }
 reqwest = { version="0.11.12", features=["json"] }
 serde_json = "1.0.86"
 tokio = { version="1.21.2", features=["rt", "macros"] }
