Expose docker.sock securely

--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -4,6 +4,7 @@ dashboard = false
 
 [providers.docker]
 exposedByDefault = false
+endpoint = "tcp://socket-proxy:2375" 
 
 [entryPoints]
   [entryPoints.web]
