--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,12 @@ volumes:
       allow_other: 'true'
 
 networks:
+  proxy_net:
+    enable_ipv6: false
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.20.0.0/24"
   ipv4_net:
     enable_ipv6: false
     ipam:
@@ -58,6 +64,22 @@ networks:
         - subnet: "fd00:dead:beef:1000::/64"
 
 services:
+  # This container protects docker.sock from being exposed by allowing only 'get' requests
+  # to the '/containers/*' part of the docker.sock API. This restricted version of docker.sock
+  # can be accessed via tcp://socket-proxy:2375
+  socket-proxy:
+    image: tecnativa/docker-socket-proxy
+    container_name: socket-proxy
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      CONTAINERS: 1
+    networks:
+      - proxy_net
+    labels:
+      - "traefik.enable=false"
+
   traefik:
     # The official v2 Traefik docker image
     build:
@@ -67,12 +89,15 @@ services:
         traefik_email: ${TRAEFIK_EMAIL}
     container_name: traefik
     networks:
+      - proxy_net
       - ipv4_net
       - ipv6_net
     # Enables the web UI and tells Traefik to listen to docker
     command:
       - "--configFile=/traefik.toml"
     restart: always
+    depends_on:
+      - socket-proxy
     ports:
       # The HTTP port
       - "80:80"
@@ -81,8 +106,6 @@ services:
       # The Web UI (enabled by --api.insecure=true)
       #- "8080:8080"
     volumes:
-      # So that Traefik can listen to the Docker events
-      - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik/acme.json:/acme.json
     labels:
       - "traefik.enable=false"
@@ -101,7 +124,6 @@ services:
     depends_on:
       - mariadb
       - redis
-      - traefik
     environment:
       - OWNCLOUD_DOMAIN=localhost:8080
       - OWNCLOUD_TRUSTED_DOMAINS=${OWNCLOUD_TRUSTED_DOMAINS}
