Set env variable RUST_LOG

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -37,6 +37,6 @@ RUN chmod +x /etc/periodic/hourly/* || true
 
 RUN touch /var/log/cron.log
 RUN (crontab -l 2>/dev/null; echo "0 0 * * 0 /duplicity/run_dup_once.sh > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
-RUN (crontab -l 2>/dev/null; echo "*/30 * * * * cf_dyndns --dotenv-dir / > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
+RUN (crontab -l 2>/dev/null; echo "*/30 * * * * RUST_LOG=info cf_dyndns --dotenv-dir / > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
 
 CMD ["crond", "-f"]
