Fixed jellyfin backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -300,6 +300,7 @@ services:
     volumes:
       - jellyfin_config:/config
       - owncloud_webdav:/media
+      - backup:/mnt/backup
     devices:
       # Specific to RPi4B
       - /dev/video10:/dev/video10
