--- a/jellyfin/Dockerfile
+++ b/jellyfin/Dockerfile
@@ -2,7 +2,7 @@ FROM jellyfin/jellyfin
 
 ARG host_video_gid
 
-RUN apt-get update && apt-get install -y cron
+RUN apt-get update && apt-get install -y cron rsync
 COPY ./backup_script.sh /backup_script.sh
 RUN chmod +x /backup_script.sh
 RUN (crontab -l 2>/dev/null; echo "0 0 * * 0 /backup_script.sh > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
