--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       CONTAINERS: 1
+      IMAGES: 1
     networks:
       - proxy_net
     labels:
@@ -336,8 +337,6 @@ services:
       - ipv4_net
       - proxy_net
     pid: host
-    #     volumes:
-    #       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - "GLANCES_OPT=-w"
       - DOCKER_HOST=tcp://socket-proxy:2375
