--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -367,7 +367,7 @@ services:
   ocis:
     image: ${OCIS_DOCKER_IMAGE:-owncloud/ocis}:${OCIS_DOCKER_TAG:-latest}
     networks:
-      ocis-net:
+      - ipv4_net
     entrypoint:
       - /bin/sh
     # run ocis init to initialize a configuration file with random secrets
