--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,17 @@
 version: "2.4"
 
 volumes:
-  files:
+  owncloud_files:
     driver: local
     driver_opts:
       type: volume
-      device: ${DATA_PATH}/files
+      device: ${DATA_PATH}/ocis_data
       o: bind
-  mysql:
+  owncloud_config:
     driver: local
     driver_opts:
       type: volume
-      device: ${DATA_PATH}/mysql
-      o: bind
-  redis:
-    driver: local
-    driver_opts:
-      type: volume
-      device: ${DATA_PATH}/redis
+      device: ${DATA_PATH}/ocis_config
       o: bind
   jellyfin_config:
     driver: local
@@ -90,9 +84,11 @@ services:
         traefik_email: ${TRAEFIK_EMAIL}
     container_name: traefik
     networks:
-      - proxy_net
-      - ipv4_net
-      - ipv6_net
+      proxy_net:
+      ipv4_net:
+        aliases:
+          - ${OCIS_DOMAIN:-ocis.owncloud.test}
+      ipv6_net:
     # Enables the web UI and tells Traefik to listen to docker
     command:
       - "--configFile=/traefik.toml"
@@ -110,114 +106,70 @@ services:
       - ./traefik/acme.json:/acme.json
     labels:
       - "traefik.enable=false"
-
-  owncloud:
-    build:
-      context: ./owncloud
-      dockerfile: Dockerfile
-      args:
-        owncloud_version: ${OWNCLOUD_VERSION}
-    image: owncloud/server:${OWNCLOUD_VERSION}
-    container_name: owncloud_server
+  
+  ocis:
+    image: ${OCIS_DOCKER_IMAGE:-owncloud/ocis}:${OCIS_DOCKER_TAG:-latest}
+    container_name: ocis
     networks:
       - ipv4_net
-    restart: always
-    depends_on:
-      - mariadb
-      - redis
+    entrypoint:
+      - /bin/sh
+    # run ocis init to initialize a configuration file with random secrets
+    # it will fail on subsequent runs, because the config file already exists
+    # therefore we ignore the error and then start the ocis server
+    command: ["-c", "ocis init || true; ocis server"]
     environment:
-      - OWNCLOUD_DOMAIN=localhost:8080
-      - OWNCLOUD_TRUSTED_DOMAINS=${OWNCLOUD_TRUSTED_DOMAINS}
-      - OWNCLOUD_DB_TYPE=mysql
-      - OWNCLOUD_DB_NAME=owncloud
-      - OWNCLOUD_DB_USERNAME=owncloud
-      - OWNCLOUD_DB_PASSWORD=owncloud
-      - OWNCLOUD_DB_HOST=mariadb
-      - OWNCLOUD_ADMIN_USERNAME=${ADMIN_USERNAME}
-      - OWNCLOUD_ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - OWNCLOUD_MYSQL_UTF8MB4=true
-      - OWNCLOUD_REDIS_ENABLED=true
-      - OWNCLOUD_REDIS_HOST=redis
-    ports:
-      - 8080:8080
-    labels:
-      # Set up https remote router
-      - "traefik.http.routers.owncloud.rule=${OWNCLOUD_TRAEFIK_RULE}"
-      - "traefik.http.routers.owncloud.entrypoints=websecure"
-      - "traefik.http.routers.owncloud.tls=true"
-      - "traefik.http.routers.owncloud.tls.certresolver=le"
-      # Set up middleware for redirecting http requests to https
-      - "traefik.http.middlewares.httptohttps.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.httptohttps.redirectscheme.permanent=true"
-      # Set up http remote router and configure it to use the redirect to https middleware
-      - "traefik.http.routers.httpowncloud.rule=${OWNCLOUD_TRAEFIK_RULE}"
-      - "traefik.http.routers.httpowncloud.entrypoints=web"
-      - "traefik.http.routers.httpowncloud.middlewares=httptohttps@docker"
-      # Set up local http router
-      - "traefik.http.routers.localowncloud.rule=Host(`owncloud.home`)"
-      - "traefik.http.routers.localowncloud.entrypoints=web"
-      # Set port
-      - "traefik.http.services.owncloud.loadbalancer.server.port=8080"
-      - "traefik.enable=true"
-    healthcheck:
-      test: [ "CMD", "/usr/bin/healthcheck" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      # enable the notifications service as it is not started automatically
+      OCIS_ADD_RUN_SERVICES: "notifications"
+      OCIS_URL: https://${OCIS_DOMAIN:-ocis.owncloud.test}
+      OCIS_LOG_LEVEL: info
+      OCIS_LOG_COLOR: "true"
+      OCIS_LOG_PRETTY: "true"
+      # do not use SSL between Traefik and oCIS
+      PROXY_TLS: "false"
+      # make the REVA gateway accessible to the app drivers
+      GATEWAY_GRPC_ADDR: 0.0.0.0:9142
+      # INSECURE: needed if oCIS / Traefik is using self generated certificates
+      OCIS_INSECURE: "false"
+      # basic auth (not recommended, but needed for eg. WebDav clients that do not support OpenID Connect)
+      PROXY_ENABLE_BASIC_AUTH: "false"
+      # admin user password
+      IDM_ADMIN_PASSWORD: "${ADMIN_PASSWORD:-admin}" # this overrides the admin password from the configuration file
+      # demo users
+      IDM_CREATE_DEMO_USERS: "false"
+      # email server (if configured)
+      NOTIFICATIONS_SMTP_HOST: "${SMTP_HOST}"
+      NOTIFICATIONS_SMTP_PORT: "${SMTP_PORT}"
+      NOTIFICATIONS_SMTP_SENDER: "${SMTP_SENDER:-oCIS notifications <notifications@${OCIS_DOMAIN:-ocis.owncloud.test}>}"
+      NOTIFICATIONS_SMTP_USERNAME: "${SMTP_USERNAME}"
+      NOTIFICATIONS_SMTP_INSECURE: "${SMTP_INSECURE}"
+      # make the registry available to the app provider containers
+      MICRO_REGISTRY_ADDRESS: 127.0.0.1:9233
+      NATS_NATS_HOST: 0.0.0.0
+      NATS_NATS_PORT: 9233
+      PROXY_CSP_CONFIG_FILE_LOCATION: /etc/ocis/csp.yaml
+      # these three vars are needed to the csp config file to include the web office apps and the importer
+      COLLABORA_DOMAIN: ${COLLABORA_DOMAIN:-collabora.owncloud.test}
+      ONLYOFFICE_DOMAIN: ${ONLYOFFICE_DOMAIN:-onlyoffice.owncloud.test}
+      COMPANION_DOMAIN: ${COMPANION_DOMAIN:-companion.owncloud.test}
+      # enable to allow using the banned passwords list
+      OCIS_PASSWORD_POLICY_BANNED_PASSWORDS_LIST: banned-password-list.txt
     volumes:
-      - files:/mnt/data
+      - ./ocis/config/ocis/app-registry.yaml:/etc/ocis/app-registry.yaml
+      - ./ocis/config/ocis/csp.yaml:/etc/ocis/csp.yaml
+      - ./ocis/config/ocis/banned-password-list.txt:/etc/ocis/banned-password-list.txt
+      # configure the .env file to use own paths instead of docker internal volumes
+      - owncloud_config:/etc/ocis
+      - owncloud_files:/var/lib/ocis
       - backup:/mnt/backup
-
-  mariadb:
-    image: mariadb:10.5
-    container_name: owncloud_mariadb
-    networks:
-      - ipv4_net
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=owncloud
-      - MYSQL_USER=owncloud
-      - MYSQL_PASSWORD=owncloud
-      - MYSQL_DATABASE=owncloud
-    command:
-      [
-        "--max-allowed-packet=128M",
-        "--innodb-log-file-size=64M"
-      ]
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "ping",
-          "-u",
-          "root",
-          "--password=owncloud"
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    volumes:
-      - mysql:/var/lib/mysql
     labels:
-      - "traefik.enable=false"
-
-  redis:
-    image: redis:6
-    container_name: owncloud_redis
-    networks:
-      - ipv4_net
+      - "traefik.http.routers.ocis.rule=Host(`${OCIS_DOMAIN:-ocis.owncloud.test}`)"
+      - "traefik.http.routers.ocis.entrypoints=websecure"
+      - "traefik.http.routers.ocis.tls=true"
+      - "traefik.http.routers.ocis.tls.certresolver=le"
+      - "traefik.http.services.ocis.loadbalancer.server.port=9200"
+      - "traefik.enable=true"
     restart: always
-    command: [ "--databases", "1" ]
-    healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    volumes:
-      - redis:/data
-    labels:
-      - "traefik.enable=false"
 
   cron:
     build:
@@ -364,66 +316,3 @@ services:
       - "traefik.http.services.homepage.loadbalancer.server.port=3000"
       - "traefik.enable=true"
 
-  ocis:
-    image: ${OCIS_DOCKER_IMAGE:-owncloud/ocis}:${OCIS_DOCKER_TAG:-latest}
-    container_name: ocis
-    networks:
-      - ipv4_net
-    entrypoint:
-      - /bin/sh
-    # run ocis init to initialize a configuration file with random secrets
-    # it will fail on subsequent runs, because the config file already exists
-    # therefore we ignore the error and then start the ocis server
-    command: ["-c", "ocis init || true; ocis server"]
-    environment:
-      # enable the notifications service as it is not started automatically
-      OCIS_ADD_RUN_SERVICES: "notifications"
-      OCIS_URL: https://${OCIS_DOMAIN:-ocis.owncloud.test}
-      OCIS_LOG_LEVEL: info
-      OCIS_LOG_COLOR: "true"
-      OCIS_LOG_PRETTY: "true"
-      # do not use SSL between Traefik and oCIS
-      PROXY_TLS: "false"
-      # make the REVA gateway accessible to the app drivers
-      GATEWAY_GRPC_ADDR: 0.0.0.0:9142
-      # INSECURE: needed if oCIS / Traefik is using self generated certificates
-      OCIS_INSECURE: "false"
-      # basic auth (not recommended, but needed for eg. WebDav clients that do not support OpenID Connect)
-      PROXY_ENABLE_BASIC_AUTH: "false"
-      # admin user password
-      IDM_ADMIN_PASSWORD: "${ADMIN_PASSWORD:-admin}" # this overrides the admin password from the configuration file
-      # demo users
-      IDM_CREATE_DEMO_USERS: "false"
-      # email server (if configured)
-      NOTIFICATIONS_SMTP_HOST: "${SMTP_HOST}"
-      NOTIFICATIONS_SMTP_PORT: "${SMTP_PORT}"
-      NOTIFICATIONS_SMTP_SENDER: "${SMTP_SENDER:-oCIS notifications <notifications@${OCIS_DOMAIN:-ocis.owncloud.test}>}"
-      NOTIFICATIONS_SMTP_USERNAME: "${SMTP_USERNAME}"
-      NOTIFICATIONS_SMTP_INSECURE: "${SMTP_INSECURE}"
-      # make the registry available to the app provider containers
-      MICRO_REGISTRY_ADDRESS: 127.0.0.1:9233
-      NATS_NATS_HOST: 0.0.0.0
-      NATS_NATS_PORT: 9233
-      PROXY_CSP_CONFIG_FILE_LOCATION: /etc/ocis/csp.yaml
-      # these three vars are needed to the csp config file to include the web office apps and the importer
-      COLLABORA_DOMAIN: ${COLLABORA_DOMAIN:-collabora.owncloud.test}
-      ONLYOFFICE_DOMAIN: ${ONLYOFFICE_DOMAIN:-onlyoffice.owncloud.test}
-      COMPANION_DOMAIN: ${COMPANION_DOMAIN:-companion.owncloud.test}
-      # enable to allow using the banned passwords list
-      OCIS_PASSWORD_POLICY_BANNED_PASSWORDS_LIST: banned-password-list.txt
-    volumes:
-      - ./ocis/config/ocis/app-registry.yaml:/etc/ocis/app-registry.yaml
-      - ./ocis/config/ocis/csp.yaml:/etc/ocis/csp.yaml
-      - ./ocis/config/ocis/banned-password-list.txt:/etc/ocis/banned-password-list.txt
-      # configure the .env file to use own paths instead of docker internal volumes
-      - ${OCIS_CONFIG_DIR}:/etc/ocis
-      - ${OCIS_DATA_DIR}:/var/lib/ocis
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.ocis.tls=true"
-      - "traefik.http.routers.ocis.entrypoints=websecure"
-      - "traefik.http.routers.ocis.rule=Host(`${OCIS_DOMAIN:-ocis.owncloud.test}`)"
-      - "traefik.http.routers.ocis.tls.certresolver=le"
-      # - "traefik.http.routers.ocis.service=ocis"
-      - "traefik.http.services.ocis.loadbalancer.server.port=9200"
-    restart: always
