--- a/rclone_plugin/config.json
+++ b/rclone_plugin/config.json
@@ -65,7 +65,7 @@
         },
         {
             "name": "OIDC_SOCK",
-            "value": "/oidc_sock"
+            "value": "/oidc_socket"
         }
     ],
     "mounts": [
