--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,7 +195,7 @@ services:
       - "traefik.enable=false"
     volumes:
       - jellyfin_config:/mnt/jellyfin_config:ro
-      - owncloud_files:/mnt/ocis_files:ro
+      - owncloud_files:/mnt/ocis_data:ro
       - owncloud_config:/mnt/ocis_config:ro
       - backup:/mnt/backup
 
